--- a/DeliveryShare/DeliveryShare.csproj
+++ b/DeliveryShare/DeliveryShare.csproj
@@ -56,12 +56,26 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="SamplePage1.xaml.cs">
-      <DependentUpon>SamplePage1.xaml</DependentUpon>
+    <Compile Include="ArticleUserControl.xaml.cs">
+      <DependentUpon>ArticleUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Article.cs" />
+    <Compile Include="Classes\ArticleData.cs" />
+    <Compile Include="Commands\AddArticleCommand.cs" />
+    <Compile Include="FoodMainPage.xaml.cs">
+      <DependentUpon>FoodMainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePage2.xaml.cs">
       <DependentUpon>SamplePage2.xaml</DependentUpon>
     </Compile>
+    <Page Include="ArticleUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FoodMainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,10 +89,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MyPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SamplePage1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
